--- a/.github/workflows/automatedSurgeDeployment.yml
+++ b/.github/workflows/automatedSurgeDeployment.yml
@@ -31,4 +31,4 @@ jobs:
       - name: install surge
         run: npm install -g surge
       - name: run surge
-        run: surge ./ Noaman-Saleem-Project1.surge.sh --token${{secrets.surge_token}}
+        run: surge ./ Noaman-Saleem-Project1.surge.sh --token ${{secrets.SURGE_TOKEN}}
